# opentofu-lab-automation

./: .flake8  .gitignore  .pylintrc  .scriptanalyzersettings.psd1  .yamllint.yml  AGENTS.md  AUTO-FIX-INTEGRATION-SUMMARY.md  AUTOMATED-TESTING-MISSION-COMPLETE.md  BOOTSTRAP-CONSOLIDATION-PLAN.md  BRANCH-SOLUTION-SUMMARY.md  CHANGELOG.md  CLEANUP-PROGRESS-20250616-035137.md  CLEANUP-PROGRESS-20250616-035150.md  CLEANUP-PROGRESS-20250616-035626.md  CLEANUP-PROGRESS-20250616-042757.md  CLEANUP-PROGRESS-20250616-043342.md  CLEANUP-PROGRESS-20250616-043608.md  CLEANUP-PROGRESS-20250616-043623.md  CLEANUP-PROGRESS-20250616-044745.md  CLEANUP-PROGRESS-20250616-045253.md  CLEANUP-PROGRESS-20250616-045750.md  CLEANUP-PROGRESS-20250616-050617.md  CLEANUP-PROGRESS-LOG.md  CODEFIXER-DEPRECATION-REPORT.md  CONTRIBUTING.md  COPILOT-AUTOMATION-IMPLEMENTATION.md  COPILOT-SETUP.md  CommitChanges.ps1  Complete-CodeFixer-Removal-Fixed.ps1  Complete-CodeFixer-Removal.ps1  Copilot-Config-Cleanup-Summary.md  CustomLint.ps1  DEPLOYMENT-WRAPPER-SUMMARY.md  DEVELOPMENT-ENVIRONMENT-IMPROVEMENTS-SUMMARY.md  Demo-AutomatedTestingFramework.ps1  Demo-ComprehensivePatchManagerIssueTracking.ps1  Demo-CopilotPatchManagerEnforcement.ps1  Diagnose-VSCodePester.ps1  Dockerfile  ENHANCED-VALIDATION-TRACKING-SUMMARY.md  (+178 more)
.copilot/: config.json
.github/: COPILOT-UPDATE-SUMMARY.md  README.md  UNIFIED-PROJECT-GUIDELINES.md  copilot-instructions.md  issue-on-fail.yml  personal-copilot-instructions.md
LabRunner/: Download-Archive.ps1  Expand-All.ps1  Format-Config.ps1  Get-LabConfig.ps1  Get-Platform.ps1  LabRunner.psd1  LabRunner.psm1  Logger.ps1  Menu.ps1  Network.ps1  OpenTofuInstaller.ps1  ScriptTemplate.ps1  UNAPPROVED_VERBS.txt
TestResults/: PesterResults.xml
archive/: pester-output.txt  pestertesterresults.xml  test-bootstrap-fixes.py  test-bootstrap-syntax.py  test-format-function.ps1  test-script-sample.ps1  testResults.xml  validate-syntax.py
cleanup-backup-20250612-065942/: CHANGELOG.md  CONTRIBUTING.md  Code Citations.md  LICENSE  TestResults_Multiple.xml  TestResults_Sample.xml  (+9 more)
py/: README.md  check_python_syntax.py  comprehensive_python_tests.py  config_schema.py  config_schema_simple.py  enhanced_powershell_executor.py  fix_python_issues.py  gh_models.py  powershell_executor.py  powershell_executor_broken.py  powershell_executor_fixed.py  pyproject.toml  simple_test.py  test_components.py
py/labctl/: __init__.py  chrome_utils.py  cli.py  github_utils.py  issue_parser.py  lint_failures.py  path_index.py  pester_failures.py  pytest_failures.py  ui.py  update_index.py
py/labctl/config_files/: default-config.json  full-config.json  index.json
py/tests/: test_chrome_utils.py  test_cli.py  test_get_platform.py  test_github_utils.py  test_issue_parser.py  test_kickstart_bootstrap.py  test_lint_failures.py  test_path_index.py  test_pester_failures.py  test_pytest_failures.py  test_python_syntax_validation.py  test_ui.py
temp/: a
(+2170 files in other folders)
