[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentofu-lab-automation"
version = "1.0.0"
description = "Cross-platform OpenTofu lab automation"
authors = [
    {name = "OpenTofu Lab Team", email = "team@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "tkinter-tooltip>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.scripts]
opentofu-lab = "launcher:main"

[project.urls]
Homepage = "https://github.com/your-username/opentofu-lab-automation"
Repository = "https://github.com/your-username/opentofu-lab-automation"
Documentation = "https://your-username.github.io/opentofu-lab-automation"

[tool.setuptools.packages.find]
where = ["."]
include = ["py*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["py/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config", 
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "syntax: marks tests as syntax validation tests",
    "security: marks tests as security validation tests"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
