[project]
name = "labctl"
version = "0.1.0"
description = ""
authors = [
    {name = "Codex",email = "codex@openai.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0",
  "textual>=0.58",
]

[project.scripts]
labctl = "labctl.cli:app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[tool.poetry.dev-dependencies]
typer = "^0.12"
PyYAML = "^6.0"
textual = "^0.58"

[tool.poetry]
packages = [
  { include = "labctl" }
]
include = [
  "labctl/config_files/**"
]

